--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     text-align: left;
     flex-direction: column;
-    font-size:1vh;
+    font-size:(16px + 1vh);
 }
 
 main {
@@ -69,6 +69,7 @@ a:hover {
 
 .copyright {
     margin: 15px 0;
+    padding: 30px
 }
 
 /* Paginator */
